<resources>
    <string name="app_name">FeedMyTummy</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="reels">Reels</string>
    <string name="profile">Profile</string>
    <string name="Groceries">Groceries</string>
    <string name="Settings">Settings</string>
    <string name="upload_icon">Upload icon</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="app_logo">App Logo</string>

    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>

    <string name="english" translatable="false">English</string>
    <string name="afrikaans" translatable="false">Afrikaans</string>
    <string name="zulu" translatable="false">Zulu</string>

    <string name="default_web_client_id">22915536789-e81scbrgae1ltknhgqkma6ug4akgrq4q.apps.googleusercontent.com</string>
</resources>
