<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/button_home"
    android:title="@string/home"
    android:icon="@drawable/home_svgrepo_com"/>
    <item
        android:id="@+id/button_search"
        android:title="@string/search"
        android:icon="@drawable/search_alt_svgrepo_com"/>
    <item
        android:id="@+id/button_add"
        android:title="@string/add"
        android:icon="@drawable/add_ellipse_svgrepo_com"/>
    <item
        android:id="@+id/button_groceries"
        android:title="@string/Groceries"
        android:icon="@drawable/shopping_cart_svgrepo_com"/>
    <item
    android:id="@+id/button_settings"
    android:title="@string/Settings"
    android:icon="@drawable/settings"/>

</menu>